Refs #99273 fixed header-title and search input on IE11

--- a/src/forests/theme/skins/fise_theme_styles/components/header.less
+++ b/src/forests/theme/skins/fise_theme_styles/components/header.less
@@ -485,3 +485,18 @@ input.searchPage {
     font-size: 17px;
   }
 }
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    // IE10+ CSS here, fixed display of header title hidden
+   // before fixes
+  .header-image {
+    display: block;
+  }
+  .header-image-title {
+    top: 35%;
+  }
+  
+  // search input is smaller on IE11
+  input.searchPage {
+    font-size: 150% !important; // overriding plone important
+  }
+}
